# ms-nancy

./: .gitignore  CLAUDE.md.disabled  agent.py  agent_anthro.py  agent_class.py  agent_langchain.py  agent_pydantic.py  agent_schema.py  agent_v2.py  alternative.py  main.py  pyproject.toml  tools.py
prompts/: system_prompt.py
utils/: config.py  tools.py
