[project]
name = "ms-nancy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "black>=26.5.1",
    "dotenv>=0.9.9",
    "ipython>=9.15.0",
    "langchain>=1.3.14",
    "openai>=2.45.0",
    "pydantic-ai>=2.9.0",
]
