[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ms-nancy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agents>=1.4.0",
    "anthropic>=0.116.0",
    "black>=26.5.1",
    "dotenv>=0.9.9",
    "ipython>=9.15.0",
    "langchain[openai]>=1.3.14",
    "numpy>=2.5.1",
    "openai>=2.45.0",
    "pydantic-ai>=2.9.0",
    "sounddevice>=0.5.5",
]

[tool.hatch.build.targets.wheel]
packages = ["utils"]
